Fixed behind buig.

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ button.navbar-toggle {
 	overflow: visible;
 	position: absolute;
 	top: 5px;
+	z-index: 100;
 }
 
 @media (max-width: 720px) {
